# SCypher-rust

./: Cargo.toml
implementacion en proceso/scypher-gui/src/: index.html  main.js  styles.css
implementacion en proceso/scypher-gui/src-tauri/src/: commands.rs
plan implementacion GUI/: GUI mackup V12.html  scypher_gui_implementation_plan.md
scypher-gui/src/: index.html
scypher-gui/src-tauri/src/: commands.rs
src/: main.rs
src/cli/: input.rs  mod.rs  output.rs
src/security/: memory.rs  mod.rs
